--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,13 @@
     <!--Custom JavaScript -->
     <script src="./assets/js/custom.min.js"></script>
     <!-- ============================================================== -->
-    <!-- Style switcher -->
-    <!-- ============================================================== -->
+    <!-- Style switcher
     <script src="./assets/plugins/styleswitcher/jQuery.style.switcher.js"></script>
+    -->
+    <!-- ============================================================== -->
+    <!-- Charts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js" integrity="sha512-VCHVc5miKoln972iJPvkQrUYYq7XpxXzvqNfiul1H4aZDwGBGC0lq373KNleaB2LpnC2a/iNfE5zoRYmB4TRDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.2/dist/chart.min.js"></script>
 </body>
 
 </html>
