--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>AdminPro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="597845449180-mf4cqurem6pkpigfidv8u9ario80ld4b.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon.png">
     <!-- Bootstrap Core CSS -->
